{
  "version": 4,
  "terraform_version": "0.15.4",
  "serial": 130,
  "lineage": "67f1559f-9094-aa7c-e333-714632085ee8",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-01839c3634a03e3cb",
            "network_border_group": "eu-west-3",
            "public_dns": "ec2-15-236-102-13.eu-west-3.compute.amazonaws.com",
            "public_ip": "15.236.102.13",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_elb",
      "name": "lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-3:176958596043:loadbalancer/lb",
            "availability_zones": [
              "eu-west-3a"
            ],
            "connection_draining": false,
            "connection_draining_timeout": 300,
            "cross_zone_load_balancing": true,
            "dns_name": "lb-1259290031.eu-west-3.elb.amazonaws.com",
            "health_check": [
              {
                "healthy_threshold": 10,
                "interval": 30,
                "target": "TCP:80",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "lb",
            "idle_timeout": 60,
            "instances": [
              "i-07b167dfc4b2f09b4",
              "i-0d8586d5824ac5d99"
            ],
            "internal": false,
            "listener": [
              {
                "instance_port": 80,
                "instance_protocol": "tcp",
                "lb_port": 80,
                "lb_protocol": "tcp"
              }
            ],
            "name": "lb",
            "security_groups": [
              "sg-03d818b1a17bb3403"
            ],
            "source_security_group": "176958596043/terraform-20210603140051792200000001",
            "source_security_group_id": "sg-03d818b1a17bb3403",
            "subnets": [
              "subnet-0a4bddee4b71df1ec"
            ],
            "zone_id": "Z3Q77PNBQS71R4"
          },
          "dependencies": [
            "aws_instance.web-server-1",
            "aws_instance.web-server-2",
            "aws_internet_gateway.igw",
            "aws_security_group.web-server",
            "aws_subnet.public-subnet",
            "aws_vpc.vpc",
            "data.aws_availability_zones.availability_zones",
            "data.template_file.piwigo-bootstrap"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0f7cd40eac2214b37",
            "arn": "arn:aws:ec2:eu-west-3:176958596043:instance/i-046267edd72155a66",
            "associate_public_ip_address": false,
            "availability_zone": "eu-west-3a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-046267edd72155a66",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "piwigo_key_pair",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-00ee66cd6d797016a",
            "private_dns": "ip-10-10-2-237.eu-west-3.compute.internal",
            "private_ip": "10.10.2.237",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-06c8e280df465c51d",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05f101be02d8871b9",
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0be508a727a80d4c1"
            ]
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_security_group.db",
            "aws_security_group.web-server",
            "aws_subnet.private-subnet",
            "aws_vpc.vpc",
            "data.aws_availability_zones.availability_zones",
            "data.template_file.db-bootstrap"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web-server-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0f7cd40eac2214b37",
            "arn": "arn:aws:ec2:eu-west-3:176958596043:instance/i-07b167dfc4b2f09b4",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-3a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-07b167dfc4b2f09b4",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "piwigo_key_pair",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-085983ddb3cf5cc27",
            "private_dns": "ip-10-10-1-12.eu-west-3.compute.internal",
            "private_ip": "10.10.1.12",
            "public_dns": "ec2-15-237-139-82.eu-west-3.compute.amazonaws.com",
            "public_ip": "15.237.139.82",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0eef559474b55c7e5",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a4bddee4b71df1ec",
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-03d818b1a17bb3403"
            ]
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_security_group.web-server",
            "aws_subnet.public-subnet",
            "aws_vpc.vpc",
            "data.aws_availability_zones.availability_zones",
            "data.template_file.piwigo-bootstrap"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web-server-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0f7cd40eac2214b37",
            "arn": "arn:aws:ec2:eu-west-3:176958596043:instance/i-0d8586d5824ac5d99",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-3a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d8586d5824ac5d99",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "piwigo_key_pair",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0998de8f1b42eca02",
            "private_dns": "ip-10-10-1-92.eu-west-3.compute.internal",
            "private_ip": "10.10.1.92",
            "public_dns": "ec2-15-237-143-137.eu-west-3.compute.amazonaws.com",
            "public_ip": "15.237.143.137",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-07b133b7dca6cfc6f",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a4bddee4b71df1ec",
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-03d818b1a17bb3403"
            ]
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_security_group.web-server",
            "aws_subnet.public-subnet",
            "aws_vpc.vpc",
            "data.aws_availability_zones.availability_zones",
            "data.template_file.piwigo-bootstrap"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:176958596043:internet-gateway/igw-06aa50279c08f54dd",
            "id": "igw-06aa50279c08f54dd",
            "owner_id": "176958596043",
            "vpc_id": "vpc-03c29923e1abdb1c5"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01839c3634a03e3cb",
            "id": "nat-0f5462c7f03f99161",
            "network_interface_id": "eni-0be578a8ba2122b08",
            "private_ip": "10.10.1.8",
            "public_ip": "15.236.102.13",
            "subnet_id": "subnet-0a4bddee4b71df1ec",
            "tags": {
              "Name": "DummyNatGateway"
            },
            "tags_all": {
              "Name": "DummyNatGateway"
            }
          },
          "dependencies": [
            "aws_eip.nat_gateway",
            "aws_subnet.public-subnet",
            "aws_vpc.vpc",
            "data.aws_availability_zones.availability_zones"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:176958596043:route-table/rtb-0e0acff0b71ca7bf6",
            "id": "rtb-0e0acff0b71ca7bf6",
            "owner_id": "176958596043",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0f5462c7f03f99161",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "vpc_id": "vpc-03c29923e1abdb1c5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat_gateway",
            "aws_nat_gateway.nat_gateway",
            "aws_subnet.public-subnet",
            "aws_vpc.vpc",
            "data.aws_availability_zones.availability_zones"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:176958596043:route-table/rtb-075a7b34b9b89c328",
            "id": "rtb-075a7b34b9b89c328",
            "owner_id": "176958596043",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-06aa50279c08f54dd",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "vpc_id": "vpc-03c29923e1abdb1c5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fa81616e5e761a4d",
            "route_table_id": "rtb-0e0acff0b71ca7bf6",
            "subnet_id": "subnet-05f101be02d8871b9"
          },
          "dependencies": [
            "aws_eip.nat_gateway",
            "aws_nat_gateway.nat_gateway",
            "aws_route_table.instance",
            "aws_subnet.private-subnet",
            "aws_subnet.public-subnet",
            "aws_vpc.vpc",
            "data.aws_availability_zones.availability_zones"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08e74e0bf30efe0ec",
            "route_table_id": "rtb-075a7b34b9b89c328",
            "subnet_id": "subnet-0a4bddee4b71df1ec"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.rt",
            "aws_subnet.public-subnet",
            "aws_vpc.vpc",
            "data.aws_availability_zones.availability_zones"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:176958596043:security-group/sg-0be508a727a80d4c1",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0be508a727a80d4c1",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-03d818b1a17bb3403"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "terraform-20210603140056263500000002",
            "name_prefix": "terraform-",
            "owner_id": "176958596043",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-03c29923e1abdb1c5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.web-server",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web-server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:176958596043:security-group/sg-03d818b1a17bb3403",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03d818b1a17bb3403",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20210603140051792200000001",
            "name_prefix": "terraform-",
            "owner_id": "176958596043",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-03c29923e1abdb1c5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:176958596043:subnet/subnet-05f101be02d8871b9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3a",
            "availability_zone_id": "euw3-az1",
            "cidr_block": "10.10.2.0/24",
            "id": "subnet-05f101be02d8871b9",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "176958596043",
            "vpc_id": "vpc-03c29923e1abdb1c5"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.availability_zones"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:176958596043:subnet/subnet-0a4bddee4b71df1ec",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3a",
            "availability_zone_id": "euw3-az1",
            "cidr_block": "10.10.1.0/24",
            "id": "subnet-0a4bddee4b71df1ec",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "176958596043",
            "vpc_id": "vpc-03c29923e1abdb1c5"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.availability_zones"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:176958596043:vpc/vpc-03c29923e1abdb1c5",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-07b939d30c2bd79c9",
            "default_route_table_id": "rtb-014c11a5143651267",
            "default_security_group_id": "sg-0df6a57f8fc718aab",
            "dhcp_options_id": "dopt-2160a849",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-03c29923e1abdb1c5",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-014c11a5143651267",
            "owner_id": "176958596043"
          }
        }
      ]
    }
  ]
}